--- a/style.css
+++ b/style.css
@@ -1,17 +1,10 @@
 @charset "UTF-8";
 /*
-Theme Name: Kawachi1920
-Theme URI: http://kawachi1920.com/
-Author: Digistry
-Author URI: http://digistry.jp/
-Description: Theme Description
-Version: 1.0.0
-License: GNU General Public License v3 or later
-License URI: http://www.gnu.org/licenses/gpl-3.0.en.html
-Text Domain: text_domain
-Template:     ocin-lite
-Tags: right-sidebar, two-columns, custom-background, custom-colors, custom-header, custom-menu, featured-image-header, featured-images, flexible-header, full-width-template, rtl-language-support, sticky-post, theme-options, threaded-comments, translation-ready
+Theme Name: JAPAN BRAND POLICY
+Theme URI: https://japanbrandpolicy.com
+Text Domain: jbp
 */
+/*
 /*
 ----------------------------------------------------------------
 TABLE OF CONTENTS
@@ -35,8 +28,8 @@ SCSS Variables and Mixins
 ========================================== 
 */
 body {
-  font-family: "游明朝", YuMincho, "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN","HG明朝E","ＭＳ Ｐ明朝","ＭＳ 明朝",serif;
-  font-weight: 500;
+  font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", メイリオ, Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+  font-weight: 100;
 }
 
 a {
@@ -48,7 +41,10 @@ a:hover, a:visited {
 }
 
 a {
+  -webkit-transition: opacity 0.3s, -webkit-filter 0.3s;
+  transition: opacity 0.3s, -webkit-filter 0.3s;
   transition: opacity 0.3s, filter 0.3s;
+  transition: opacity 0.3s, filter 0.3s, -webkit-filter 0.3s;
 }
 
 a:hover {
@@ -74,7 +70,11 @@ ul li {
   list-style: none;
 }
 
-@media screen and (max-width: 960px) {
+img {
+  vertical-align: bottom;
+}
+
+@media screen and (max-width: 959px) {
   img {
     width: 100%;
     max-width: 100%;
@@ -87,9 +87,54 @@ ul li {
 2. Header
 ========================================== 
 */
+header {
+  width: 200px;
+}
+
+header .logo {
+  margin: 40px 0 0 40px;
+}
+
+header .logo a {
+  width: 108px;
+  display: block;
+}
+
+header .logo a img {
+  width: 100%;
+}
+
+header nav {
+  margin: 40px 0 0 40px;
+}
+
+header nav ul li {
+  width: 80px;
+}
+
+header nav ul li.active img {
+  -webkit-filter: saturate(1) brightness(1);
+  filter: saturate(1) brightness(1);
+}
+
+header nav ul li.deactive {
+  opacity: 0.5;
+}
+
+header nav ul li a {
+  display: block;
+  height: 100%;
+}
+
+header nav ul li img {
+  width: 100%;
+  -webkit-filter: saturate(1) brightness(0);
+  filter: saturate(1) brightness(0);
+}
+
 /*
 ==========================================
-4. Navigation
+3. Navigation
 ========================================== 
 */
 nav {
@@ -109,11 +154,10 @@ nav {
 }
 
 nav ul {
-  width: 960px;
   margin: 0 auto;
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 959px) {
   nav ul {
     margin-left: 50px;
     width: auto;
@@ -125,7 +169,7 @@ nav ul li {
   border-right: 1px #FFFFFF solid;
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 959px) {
   nav ul li {
     display: block;
     width: 20%;
@@ -145,7 +189,7 @@ nav ul li:first-child {
   border-left: 1px #FFFFFF solid;
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 959px) {
   nav ul li:first-child {
     border-left: none;
   }
@@ -155,13 +199,14 @@ nav ul li:first-child a {
   width: 172px;
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 959px) {
   nav ul li:first-child a {
     width: 100%;
   }
 }
 
 nav ul li.active a img {
+  -webkit-filter: saturate(1) brightness(1);
   filter: saturate(1) brightness(1);
 }
 
@@ -170,7 +215,7 @@ nav ul li.sns {
   border-right: none;
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 959px) {
   nav ul li.sns {
     width: 20%;
   }
@@ -233,6 +278,7 @@ nav ul li.sns a {
 
 nav ul li.sns a img {
   width: 24px;
+  -webkit-filter: saturate(1) brightness(1);
   filter: saturate(1) brightness(1);
 }
 
@@ -243,6 +289,7 @@ nav ul li a {
   padding: 5px;
   height: 30px;
   text-align: center;
+  -webkit-transition: background 0.3s;
   transition: background 0.3s;
 }
 
@@ -256,7 +303,7 @@ nav ul li a:hover, nav ul li a:visited {
   color: #FFFFFF;
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 959px) {
   nav ul li a {
     width: 100%;
   }
@@ -277,6 +324,7 @@ nav ul li a:hover, nav ul li a:visited {
 
 nav ul li a img {
   height: 100%;
+  -webkit-filter: saturate(0) brightness(2);
   filter: saturate(0) brightness(2);
 }
 
@@ -300,6 +348,7 @@ nav ul li a img {
   border-radius: 3px;
   padding: 10px;
   height: 40px;
+  -webkit-transition: background 0.3s;
   transition: background 0.3s;
 }
 
@@ -334,6 +383,7 @@ nav ul li a img {
   margin: 0;
   height: 40px;
   padding: 12px 0;
+  -webkit-transition: background 0.3s;
   transition: background 0.3s;
 }
 
@@ -361,7 +411,7 @@ nav ul li a img {
 
 /*
 ==========================================
-5. Contents
+4. Contents
 ========================================== 
 */
 /*
@@ -386,29 +436,14 @@ Single
 --------------------------------------------------------------------------
 */
 main.single .post-type, main.page .post-type {
-  font-size: 26px;
   margin: 32px auto 22px;
-}
-
-main.single .post-type img, main.page .post-type img {
-  height: 26px;
-  width: auto;
 }
 
 main.single .date, main.page .date {
   font-size: 12px;
 }
 
-main.single h1, main.page h1 {
-  font-size: 26px;
-}
-
-main.single h1 img, main.page h1 img {
-  height: 26px;
-  width: auto;
-}
-
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 959px) {
   main.single h2, main.page h2 {
     margin-right: 75px;
   }
@@ -425,13 +460,28 @@ main.single h1 img, main.page h1 img {
 }
 
 main.single.shop-list .post-thumbnail, main.page.shop-list .post-thumbnail {
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
 main.single .mv_b .group .content, main.page .mv_b .group .content {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-pack: end;
+  -webkit-justify-content: flex-end;
+  -ms-flex-pack: end;
   justify-content: flex-end;
+  -webkit-align-content: flex-end;
+  -ms-flex-line-pack: end;
   align-content: flex-end;
 }
 
@@ -450,242 +500,26 @@ main.single .mv_b .group .content .en, main.page .mv_b .group .content .en {
   font-size: 18px;
 }
 
-main.single.single_a .return, main.page.single_a .return {
-  text-align: right;
-  margin-top: 32px;
-  margin-bottom: 0;
-}
-
-@media screen and (max-width: 960px) {
-  main.single.single_a .return, main.page.single_a .return {
-    margin-left: 3%;
-    margin-right: 3%;
-  }
-}
-
-main.single.single_a .heading, main.page.single_a .heading {
-  margin-top: -40px;
-}
-
-main.single.single_c .contents .return, main.page.single_c .contents .return {
-  position: absolute;
-  top: 32px;
-  right: 0;
-}
-
-@media screen and (max-width: 640px) {
-  main.single.single_c .contents .return, main.page.single_c .contents .return {
-    position: relative;
-    top: 22px;
-    text-align: right;
-  }
-}
-
-main.single.single_c .contents .detail, main.page.single_c .contents .detail {
-  column-count: 2;
-}
-
-@media screen and (max-width: 640px) {
-  main.single.single_c .contents .detail, main.page.single_c .contents .detail {
-    column-count: 1;
-  }
-}
-
-main.single.single_c .contents .detail-1, main.page.single_c .contents .detail-1 {
-  padding-top: 80px;
-}
-
-main.single.single_c .contents .img, main.page.single_c .contents .img {
-  display: flex;
-  justify-content: space-between;
-  justify-content: flex-start;
-  flex-direction: row;
-  flex-wrap: wrap;
-  flex-shrink: 0;
-  box-align: center;
-  align-items: center;
-  margin: 40px auto;
-}
-
-main.single.single_c .contents .img img, main.page.single_c .contents .img img {
-  width: 30%;
-  margin-right: 5%;
-  height: auto;
-  min-height: 0;
-}
-
-main.single.single_c .contents .img img:last-child, main.page.single_c .contents .img img:last-child {
-  margin-right: 0%;
-}
-
-@media screen and (max-width: 640px) {
-  main.single.single_c .contents .img img, main.page.single_c .contents .img img {
-    width: 100%;
-    margin-right: 0;
-    margin-bottom: 15px;
-  }
-}
-
-main.single.single_c .contents .heading, main.page.single_c .contents .heading {
-  font-size: 22px;
-  line-height: 1em;
-}
-
-main.single.single_c .contents .detail-2, main.page.single_c .contents .detail-2 {
-  margin: 40px auto;
-}
-
-main.single.single_c .contents .sns ul, main.page.single_c .contents .sns ul {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-}
-
-@media screen and (max-width: 640px) {
-  main.single.single_c .contents .sns ul, main.page.single_c .contents .sns ul {
-    flex-direction: column;
-  }
-}
-
-main.single.single_c .contents .sns ul li, main.page.single_c .contents .sns ul li {
-  margin-right: 2em;
-  margin-left: 20px;
-}
-
-@media screen and (max-width: 640px) {
-  main.single.single_c .contents .sns ul li, main.page.single_c .contents .sns ul li {
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
-  }
-}
-
-main.single.single_c .contents .sns ul li.fb, main.page.single_c .contents .sns ul li.fb {
-  margin-left: 0px;
-  padding-left: 20px;
-  background-image: url(./img/common/fb.svg);
-}
-
-@media screen and (max-width: 640px) {
-  main.single.single_c .contents .sns ul li.fb, main.page.single_c .contents .sns ul li.fb {
-    list-style: none;
-  }
-}
-
 /*
 Page
 --------------------------------------------------------------------------
 */
-main.page.thought .contents .return {
-  position: absolute;
-  top: 32px;
-  right: 0;
-}
-
-@media screen and (max-width: 640px) {
-  main.page.thought .contents .return {
-    position: relative;
-    top: 22px;
-    text-align: right;
-  }
-}
-
-main.page.thought .contents .detail {
-  column-count: 2;
-}
-
-@media screen and (max-width: 640px) {
-  main.page.thought .contents .detail {
-    column-count: 1;
-  }
-}
-
-main.page.thought .contents .detail-1 {
-  padding-top: 80px;
-}
-
-main.page.thought .contents .img {
-  display: flex;
-  justify-content: space-between;
-  justify-content: flex-start;
-  flex-direction: row;
-  flex-wrap: wrap;
-  flex-shrink: 0;
-  box-align: center;
-  align-items: center;
-  margin: 40px auto;
-}
-
-main.page.thought .contents .img img {
-  width: 30%;
-  margin-right: 5%;
-  height: auto;
-  min-height: 0;
-}
-
-main.page.thought .contents .img img:last-child {
-  margin-right: 0%;
-}
-
-@media screen and (max-width: 640px) {
-  main.page.thought .contents .img img {
-    width: 100%;
-    margin-right: 0;
-    margin-bottom: 15px;
-  }
-}
-
-main.page.thought .contents .heading {
-  font-size: 22px;
-  line-height: 1em;
-}
-
-main.page.thought .contents .detail-2 {
-  margin: 40px auto;
-}
-
-main.page.thought .contents .sns ul {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-}
-
-@media screen and (max-width: 640px) {
-  main.page.thought .contents .sns ul {
-    flex-direction: column;
-  }
-}
-
-main.page.thought .contents .sns ul li {
-  margin-right: 2em;
-  margin-left: 20px;
-}
-
-@media screen and (max-width: 640px) {
-  main.page.thought .contents .sns ul li {
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
-  }
-}
-
-main.page.thought .contents .sns ul li.fb {
-  margin-left: 0px;
-  padding-left: 20px;
-  background-image: url(./img/common/fb.svg);
-}
-
-@media screen and (max-width: 640px) {
-  main.page.thought .contents .sns ul li.fb {
-    list-style: none;
-  }
-}
-
 /*
 404
 --------------------------------------------------------------------------
 */
 article main.not_found .mv_a {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -696,81 +530,26 @@ article main.not_found .mv_a {
 */
 /*
 ==========================================
-5. Footer
+6. Footer
 ========================================== 
 */
 footer {
-  clear: both;
-  width: 960px;
-  margin: 30px auto;
-  border-top: 1px solid #000000;
-  padding-top: 15px;
-}
-
-@media screen and (max-width: 960px) {
-  footer {
-    width: 100%;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  footer {
-    width: 92%;
-  }
-}
-
-footer ul li {
-  float: right;
-}
-
-@media screen and (max-width: 767px) {
-  footer ul li {
-    float: none;
-    text-align: center;
-    margin: 1em;
-  }
-}
-
-footer ul li a {
-  padding: 0px 10px;
-  border-right: 1px solid #000000;
-}
-
-@media screen and (max-width: 767px) {
-  footer ul li a {
-    border-right: none;
-  }
-}
-
-footer ul li:last-child a {
-  border-left: 1px solid #000000;
-}
-
-@media screen and (max-width: 767px) {
-  footer ul li:last-child a {
-    border-left: none;
-  }
-}
-
-footer p {
-  float: left;
-}
-
-@media screen and (max-width: 767px) {
-  footer p {
-    float: none;
-    text-align: center;
-  }
+  margin-left: auto;
+  margin-right: auto;
+  padding: 15px 0;
+  background-color: black;
+  color: white;
+  font-size: 0.75rem;
 }
 
 /*
 ==========================================
-5. Comments
+7. Comments
 ========================================== 
 */
 /*
 ==========================================
-5. Pagenation
+8. Pagenation
 ========================================== 
 */
 .page-navi {
@@ -789,7 +568,7 @@ footer p {
 
 /*
 ==========================================
-5. Admin
+9. Admin
 ========================================== 
 */
 #wpadminbar {
@@ -798,7 +577,7 @@ footer p {
 
 /*
 ==========================================
-5. CSS Frame Work
+10. CSS Frame Work
 ========================================== 
 */
 /* CSS Document */
@@ -1052,6 +831,9 @@ footer p {
 }
 
 .display_flex {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -10763,6 +10545,9 @@ footer p {
     display: none;
   }
   .display_flex {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
   }
   /* Box
@@ -14469,3 +14254,11 @@ footer p {
     display: inline-table;
   }
 }
+
+/*
+==========================================
+11. ThemeCSS
+==========================================
+*/
+
+/*# sourceMappingURL=maps/style.css.map */
